{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 17,
  "lineage": "821b6065-af93-2b3a-757b-d6074e6a08c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:internet-gateway/igw-029206c630b27d779",
            "id": "igw-029206c630b27d779",
            "owner_id": "471112953001",
            "tags": {
              "Name": "linx-igw"
            },
            "tags_all": {
              "Name": "linx-igw"
            },
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-029206c630b27d779",
            "id": "r-rtb-0a42d98083270c40b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a42d98083270c40b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:security-group/sg-03145ffa22fad5b82",
            "description": "Security group for allowing specific traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03145ffa22fad5b82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "linx-allow-http",
            "name_prefix": "",
            "owner_id": "471112953001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linx-allow-http"
            },
            "tags_all": {
              "Name": "linx-allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:security-group/sg-078daebdc71dc8720",
            "description": "Security group for allowing specific traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078daebdc71dc8720",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "linx-allow-https",
            "name_prefix": "",
            "owner_id": "471112953001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linx-allow-https"
            },
            "tags_all": {
              "Name": "linx-allow-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-other",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:security-group/sg-0a7df1c4f17161e3b",
            "description": "Security group for allowing specific traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7df1c4f17161e3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "35.236.154.220/32",
                  "172.20.16.0/24"
                ],
                "description": "Node-Exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "35.236.154.220/32"
                ],
                "description": "Proccess Exporter",
                "from_port": 9256,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9256
              }
            ],
            "name": "linx-allow-other",
            "name_prefix": "",
            "owner_id": "471112953001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linx-allow-other"
            },
            "tags_all": {
              "Name": "linx-allow-other"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:security-group/sg-08b52cf72abdbc1c1",
            "description": "Security group for allowing specific traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b52cf72abdbc1c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "linx-allow-ssh",
            "name_prefix": "",
            "owner_id": "471112953001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linx-allow-ssh"
            },
            "tags_all": {
              "Name": "linx-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:subnet/subnet-0229a7879fbd11d7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0229a7879fbd11d7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112953001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linx-subnet-1"
            },
            "tags_all": {
              "Name": "linx-subnet-1"
            },
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetwork_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:subnet/subnet-0eded14893c09fb91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eded14893c09fb91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112953001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linx-subnet-2"
            },
            "tags_all": {
              "Name": "linx-subnet-2"
            },
            "vpc_id": "vpc-0e00fd3306a9f7cfc"
          },
          "dependencies": [
            "aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:471112953001:vpc/vpc-0e00fd3306a9f7cfc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-049320f650126440d",
            "default_route_table_id": "rtb-0a42d98083270c40b",
            "default_security_group_id": "sg-04ac1e9029b9a8986",
            "dhcp_options_id": "dopt-0c7922b60546f71d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e00fd3306a9f7cfc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a42d98083270c40b",
            "owner_id": "471112953001",
            "tags": {
              "Name": "linx-vpc"
            },
            "tags_all": {
              "Name": "linx-vpc"
            }
          }
        }
      ]
    }
  ]
}